--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 * {
     color: white;
     font-family: 'Montserrat', sans-serif; 
+
+    margin: 0;
+    padding: 0;
 }
 
-body {
+.page {
     background-color: black;
+    width: 100vw;
+    height: 100vh;
 }
+
