--- a/style.css
+++ b/style.css
@@ -10,5 +10,28 @@
     background-color: black;
     width: 100vw;
     height: 100vh;
+
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+    grid-template-columns: 1fr 5fr;
+}
+
+.header, 
+.sidebar, 
+.main-content {
+    border: 1px solid white;
+    text-align: center;
+}
+
+.header {
+    grid-column: 2 / 3;
+}
+
+.sidebar {
+    grid-row: 1 / 3;
+}
+
+.main-content { 
+
 }
 
